--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Pause</string>
+    <string name="app_name">Pause that Show</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="action_player_choice">Player Selection</string>
+    <string name="title_activity_player_selection">Player Selection</string>
+    <string name="title_activity_netflix_player">Netflix - Pause that Show</string>
 
 </resources>
