--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,6 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="action_player_choice">Player Selection</string>
     <string name="title_activity_player_selection">Player Selection</string>
-    <string name="title_activity_netflix_player">Netflix - Pause that Show</string>
+    <string name="title_activity_netflix_player">Netflix - Pause the Show</string>
 
 </resources>
